# DataStructure

./: CMakeLists.txt  main.cc
include/: DataStructures.h  LinearList.h  SeqList.h  SequentialList.h
src/: SeqList.cc  main.cc  student.cc  student.h
tests/: CMakeLists.txt  SeqList_test.cc  SequentialListTest.cc
